--- a/css/layout.css
+++ b/css/layout.css
@@ -28,7 +28,7 @@ ul {
 }
 
 a {
-    color: #333;
+    /* color: #333; */
     text-decoration: none;
     outline: none;
 }
@@ -62,10 +62,17 @@ h2 span {
     margin: 0 auto;
     padding: 70px;
 }
-
+@media screen and (min-width:941px) {
+    .mobile {
+        display: none;
+    }
+}
 @media screen and (max-width:940px) {
     .inner {
         padding: 70px 30px;
+    }
+    .pc {
+        display: none;
     }
 }
 
@@ -264,11 +271,11 @@ h2 span {
 .header-utility li:first-child::after {
     content: '';
     position: absolute;
-    right: 0;
-    top: 20px;
+    right: 15px;
+    top: 28px;
     background: #333;
     width: 1px;
-    height: 30px;
+    height: 20px;
     transform: rotate(23deg);
 }
 
@@ -295,8 +302,26 @@ h2 span {
     background: url("../img/ico_music.svg") no-repeat 20px center;
     background-size: 20px 20px;
 }
-
-
+.sp-bottom {
+    margin-bottom: 20px;
+}
+.collaboration {
+        width: 80%;
+        margin: 0 auto;
+}
+.collaboration h2 {
+    font-size: 2em;
+}
+.collaboration ul {
+    margin-bottom: 20px;
+}
+.company_info table tr td {
+    font-size: 1em;
+}
+.company_info table tr td:first-child {
+    font-weight: 500;
+    padding-right: 20px;
+}
 @media screen and (max-width:940px) {
     .header-utility {
         position: fixed;
@@ -307,9 +332,18 @@ h2 span {
         width: 100%;
         border-radius: 0;
     }
-
+    .header-utility li:first-child::after {
+        content: '';
+        position: absolute;
+        right: 15px;
+        top: 28px;
+        background: #333;
+        width: 1px;
+        height: 20px;
+        transform: rotate(23deg);
+    }
     .header-utility li {
-        width: 50%;
+        width: 100%;
         text-align: center;
     }
 
@@ -322,9 +356,23 @@ h2 span {
         background-position: 35px center;
     }
 }
-
+.collaboration h2 {
+    font-size: 1.6em;
+}
 @media screen and (max-width:560px) {
-
+    .header-utility {
+        font-size: 0.7em;
+    }
+    .header-utility li:first-child::after {
+        content: '';
+        position: absolute;
+        right: 79px;
+        top: 28px;
+        background: #333;
+        width: 0px;
+        height: 0px;
+        transform: rotate(23deg);
+    }
     .header-utility li:first-child a,
     .header-utility li:last-child a {
         background-position: 20px center;
@@ -337,7 +385,15 @@ h2 span {
     .header-utility li .pcnone {
         display: block;
     }
-
+    .company_info {
+        margin-bottom: 20px;
+    }
+    .company_info table tr td {
+        font-size: 0.7em;
+    }
+    .company_info table tr td:first-child {
+        width: 25%;
+    }
 }
 
 .badge {
@@ -399,7 +455,11 @@ h2 span {
     .badge-inner:hover {
         bottom: 90px;
     }
-
+.collaboration ul li {
+    font-size: 0.7em;
+    line-height: 1.7;
+    padding: 5px;
+}
 }
 
 /* gnavi */
@@ -412,7 +472,7 @@ h2 span {
 
 #g-nav.panelactive ul li {
     position: relative;
-    width: 30%;
+    width: 70%;
     text-align: left;
     white-space: nowrap;
 }
@@ -427,6 +487,7 @@ h2 span {
 @media screen and (max-width:580px) {
     #g-nav.panelactive ul li {
         width: 100%;
+
     }
 }
 
@@ -462,7 +523,42 @@ h2 span {
     border: 9px solid #2e98e5;
     border-radius: 20px;
 }
+.card-text:nth-child(3) {
+    margin-top: -20px !important;
 
+}
+
+.star i {
+    font-size: 15px;
+    color: rgb(250, 201, 4);
+}
+.card-text:nth-child(4) {
+    margin-top: -20px !important;
+}
+.card-text:nth-child(5) {
+    margin-top: -25px !important;
+    color: #B12704 !important;
+    font-size: 1.4em !important;
+}
+.card-text:nth-child(6) {
+    margin-top: -28px !important;
+    color: unset !important;
+    font-size: 0.8em !important;
+}
+.card-text:nth-child(7) span {
+    color: deepskyblue !important;
+    letter-spacing: 0.01em !important;
+    font-size: 1.2em;
+}
+.card-text:nth-child(7) .fa-check {
+    color: rgb(250, 201, 4);
+}
+.card-text:nth-child(8) {
+    color: unset !important;
+}
+.card-text:nth-child(9) {
+    color: unset !important;
+}
 /* ////////header height///////// */
 /* @media screen #header */
 @media screen and (max-width:1025px) {
